commit 70900bf9ae2a73ab2e73e0177b9ee263f62677e5
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Jul 22 19:00:43 2009 +0900

    aufs: tiny, describe how to git
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit c3469842d25e9b5037161aa12790412ff81be2e8
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Jul 20 23:20:44 2009 +0900

    aufs: tiny, replace some au_xino_write0() calls by au_xino_write()
    
    Since passing 0 as the inode number parameter to au_xino_write0() with
    known branch index is equivalent to au_xino_write().
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 221cf7294ea8045ff043e26e6864708f001dc3ee
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Jul 20 22:28:41 2009 +0900

    aufs: tiny, reduce the stack usage
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 2a055186b1c6c15bb088683fe9b738c69f3b264b
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Jul 20 22:13:37 2009 +0900

    aufs: bugfix, imbalance lock/unlock in error handling of aufs_link()
    
    In an error handling, aufs_link() unlocked a lock illegally.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 209cf3641b9daa3e6dd6e61af47633a28322a326
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Jul 20 21:52:43 2009 +0900

    aufs: tiny, add prefix some messages
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 735869d863fc739fa506f366632e1d229f3b4e5e
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Jul 20 21:51:18 2009 +0900

    aufs: possible bugfix, file might be removed before aufs_link()
    
    The file to be being linked by aufs_link may be remobed already.
    Test and make sure the file still exists.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 9325f789c9f36289d068ffdb581544471ea721b0
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Jul 15 04:34:50 2009 +0900
