@@ -1,3 +1,14 @@
+commit 049de2b1a34c3145ea82a2fe92c286393c4f6310
+Author: J. R. Okajima <hooanon05@yahoo.co.jp>
+Date:   Fri Jul 24 12:51:40 2009 +0900
+
+    aufs: possible bugfix, verify the lower parent dentry
+    
+    Verify the lower parent dentry and its inode just after locking the
+    dir->i_mutex.
+    
+    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>
+
 commit 70900bf9ae2a73ab2e73e0177b9ee263f62677e5
 Author: J. R. Okajima <hooanon05@yahoo.co.jp>
 Date:   Wed Jul 22 19:00:43 2009 +0900
